# This is a pseudo-module to prevent Bazel from registering these Platforms and
# toolchains on unsupported systems.

module(
    name = "local-remote-execution",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "platforms", version = "0.0.10")

# Use the starlark implementation of C++ rules instead of the builtin ones.
bazel_dep(name = "rules_cc", version = "0.0.17")

# Use the starlark implementation of Java rules instead of the builtin ones.
bazel_dep(name = "rules_java", version = "8.5.1")
bazel_dep(name = "rules_rust", version = "0.54.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

lre_rs = use_extension("//rust:extension.bzl", "lre_rs")
use_repo(
    lre_rs,
    "lre-rs-nightly-aarch64-darwin",
    "lre-rs-nightly-aarch64-linux",
    "lre-rs-nightly-x86_64-darwin",
    "lre-rs-nightly-x86_64-linux",
    "lre-rs-stable-aarch64-darwin",
    "lre-rs-stable-aarch64-linux",
    "lre-rs-stable-x86_64-darwin",
    "lre-rs-stable-x86_64-linux",
)
