# This is a pseudo-module to prevent Bazel from registering these Platforms and
# toolchains on unsupported systems.

module(
    name = "local-remote-execution",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "platforms", version = "0.0.11")

# Use the starlark implementation of C++ rules instead of the builtin ones.
bazel_dep(name = "rules_cc", version = "0.1.1")

# Use the starlark implementation of Java rules instead of the builtin ones.
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

lre_rs = use_extension("//rust:extension.bzl", "lre_rs")
use_repo(
    lre_rs,
    "lre-rs-nightly-aarch64-darwin",
    "lre-rs-nightly-aarch64-linux",
    "lre-rs-nightly-x86_64-darwin",
    "lre-rs-nightly-x86_64-linux",
    "lre-rs-stable-aarch64-darwin",
    "lre-rs-stable-aarch64-linux",
    "lre-rs-stable-x86_64-darwin",
    "lre-rs-stable-x86_64-linux",
)
