# This is a pseudo-module to prevent Bazel from registering these Platforms and
# toolchains on unsupported systems.

module(
    name = "local-remote-execution",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "platforms", version = "1.1.0")

# Use the starlark implementation of C++ rules instead of the builtin ones.
bazel_dep(name = "rules_cc", version = "0.2.18")

# Use the starlark implementation of Java rules instead of the builtin ones.
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_rs", version = "0.0.76")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
# rules_rust is pinned to the hermeticbuild fork in the parent MODULE.bazel via
# archive_override; this submodule resolves to the same archive automatically.

lre_rs = use_extension("//rust:extension.bzl", "lre_rs")
use_repo(
    lre_rs,
    "lre-rs-nightly-aarch64-darwin",
    "lre-rs-nightly-aarch64-linux",
    "lre-rs-nightly-x86_64-darwin",
    "lre-rs-nightly-x86_64-linux",
    "lre-rs-stable-aarch64-darwin",
    "lre-rs-stable-aarch64-linux",
    "lre-rs-stable-x86_64-darwin",
    "lre-rs-stable-x86_64-linux",
)

# Register the bootstrap rust toolchains. The non-bootstrap pair is registered
# via lre.bazelrc (`--extra_toolchains`) on the host side; the bootstrap pair
# only matches when @rules_rust//rust/private:bootstrap_setting is flipped on,
# which happens transitively when building the rust-built process_wrapper.
register_toolchains(
    "//rust:rust-x86_64-linux-bootstrap",
    "//rust:rust-aarch64-linux-bootstrap",
    "//rust:rust-x86_64-darwin-bootstrap",
    "//rust:rust-aarch64-darwin-bootstrap",
)
