[package]
name = "native-link-scheduler"
version = "0.0.0"
edition = "2021"

[dependencies]
error = { path = "../error" }
native-link-config = { path = "../native-link-config" }
native-link-util = { path = "../native-link-util" }
proto = { path = "../proto" }

# TODO(aaronmondal): This should not be a dependency. Move the corresponding
#                    files somewhere else.
native-link-store = { path = "../native-link-store" }

async-trait = "0.1.71"
blake3 = "1.4.1"
prost = "0.11.9"
uuid = { version = "1.4.0", features = ["v4"] }
futures = "0.3.28"
hashbrown = "0.14"
lru = "0.10.1"
parking_lot = "0.12.1"
prost-types = "0.11.9"
rand = "0.8.5"
scopeguard = "1.2.0"
tokio = { version = "1.29.1", features = ["sync", "rt", "parking_lot"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = { version = "0.9.2" }

[dev-dependencies]
pretty_assertions = "1.4.0"
