[package]
name = "native-link-scheduler"
version = "0.0.0"
edition = "2021"

[dependencies]
error = { path = "../error" }
native-link-config = { path = "../native-link-config" }
native-link-util = { path = "../native-link-util" }
proto = { path = "../proto" }

# TODO(aaronmondal): This should not be a dependency. Move the corresponding
#                    files somewhere else.
native-link-store = { path = "../native-link-store" }

async-trait = "0.1.74"
blake3 = "1.5.0"
prost = "0.11.9"
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3.29"
hashbrown = "0.14"
lru = "0.10.1"
parking_lot = "0.12.1"
rand = "0.8.5"
scopeguard = "1.2.0"
tokio = { version = "1.34.0", features = ["sync", "rt", "parking_lot"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = { version = "0.9.2", features = ["gzip"] }
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1.4.0"
