[package]
name = "native-link-service"
version = "0.0.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
error = { path = "../error" }
native-link-config = { path = "../native-link-config" }
native-link-util = { path = "../native-link-util" }
native-link-store = { path = "../native-link-store" }
native-link-scheduler = { path = "../native-link-scheduler" }

bytes = "1.4.0"
futures = "0.3.28"
log = "0.4.19"
parking_lot = "0.12.1"
prost = "0.11.9"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["sync", "rt"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = { version = "0.9.2", features = ["gzip"] }
uuid = { version = "1.4.0", features = ["v4"] }

[dev-dependencies]
hyper = "0.14.27"
maplit = "1.0.2"
pretty_assertions = "1.4.0"
prometheus-client = "0.21.2"
prost-types = "0.11.9"
