[package]
name = "native-link-service"
version = "0.0.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
error = { path = "../error" }
native-link-config = { path = "../native-link-config" }
native-link-util = { path = "../native-link-util" }
native-link-store = { path = "../native-link-store" }
native-link-scheduler = { path = "../native-link-scheduler" }

bytes = "1.5.0"
futures = "0.3.29"
log = "0.4.20"
parking_lot = "0.12.1"
prost = "0.11.9"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["sync", "rt"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = { version = "0.9.2", features = ["gzip"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4"] }

[dev-dependencies]
hyper = "0.14.27"
maplit = "1.0.2"
pretty_assertions = "1.4.0"
prometheus-client = "0.21.2"
prost-types = "0.11.9"
