load(
    "@rules_rust//rust:defs.bzl",
    "rust_doc",
    "rust_doc_test",
    "rust_library",
    "rust_test_suite",
)

rust_library(
    name = "native-link-store",
    srcs = [
        "src/ac_utils.rs",
        "src/completeness_checking_store.rs",
        "src/compression_store.rs",
        "src/dedup_store.rs",
        "src/default_store_factory.rs",
        "src/existence_cache_store.rs",
        "src/fast_slow_store.rs",
        "src/filesystem_store.rs",
        "src/grpc_store.rs",
        "src/lib.rs",
        "src/memory_store.rs",
        "src/noop_store.rs",
        "src/ref_store.rs",
        "src/s3_store.rs",
        "src/shard_store.rs",
        "src/size_partitioning_store.rs",
        "src/store_manager.rs",
        "src/verify_store.rs",
    ],
    proc_macro_deps = [
        "@crate_index//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//error",
        "//native-link-config",
        "//native-link-util",
        "//proto",
        "@crate_index//:async-lock",
        "@crate_index//:aws-config",
        "@crate_index//:aws-sdk-s3",
        "@crate_index//:aws-smithy-runtime",
        "@crate_index//:bincode",
        "@crate_index//:blake3",
        "@crate_index//:byteorder",
        "@crate_index//:bytes",
        "@crate_index//:filetime",
        "@crate_index//:futures",
        "@crate_index//:hex",
        "@crate_index//:hyper",
        "@crate_index//:hyper-rustls",
        "@crate_index//:lz4_flex",
        "@crate_index//:parking_lot",
        "@crate_index//:prost",
        "@crate_index//:rand",
        "@crate_index//:serde",
        "@crate_index//:sha2",
        "@crate_index//:shellexpand",
        "@crate_index//:tokio",
        "@crate_index//:tokio-stream",
        "@crate_index//:tokio-util",
        "@crate_index//:tonic",
        "@crate_index//:uuid",
    ],
)

rust_test_suite(
    name = "integration",
    srcs = [
        "tests/ac_utils_test.rs",
        "tests/completeness_checking_store_test.rs",
        "tests/compression_store_test.rs",
        "tests/dedup_store_test.rs",
        "tests/existence_store_test.rs",
        "tests/fast_slow_store_test.rs",
        "tests/filesystem_store_test.rs",
        "tests/memory_store_test.rs",
        "tests/ref_store_test.rs",
        "tests/s3_store_test.rs",
        "tests/shard_store_test.rs",
        "tests/size_partitioning_store_test.rs",
        "tests/verify_store_test.rs",
    ],
    proc_macro_deps = [
        "@crate_index//:async-trait",
    ],
    deps = [
        ":native-link-store",
        "//error",
        "//native-link-config",
        "//native-link-util",
        "//proto",
        "@crate_index//:async-lock",
        "@crate_index//:aws-sdk-s3",
        "@crate_index//:aws-smithy-runtime",
        "@crate_index//:aws-smithy-types",
        "@crate_index//:bincode",
        "@crate_index//:bytes",
        "@crate_index//:filetime",
        "@crate_index//:futures",
        "@crate_index//:http",
        "@crate_index//:hyper",
        "@crate_index//:log",
        "@crate_index//:memory-stats",
        "@crate_index//:once_cell",
        "@crate_index//:pretty_assertions",
        "@crate_index//:prost",
        "@crate_index//:rand",
        "@crate_index//:simple_logger",
        "@crate_index//:tokio",
        "@crate_index//:tokio-stream",
    ],
)

rust_doc(
    name = "docs",
    crate = ":native-link-store",
)

rust_doc_test(
    name = "doc_test",
    crate = ":native-link-store",
)
