[package]
name = "native-link-store"
version = "0.0.0"
edition = "2021"

[dependencies]
error = { path = "../error" }
native-link-config = { path = "../native-link-config" }
native-link-util = { path = "../native-link-util" }
proto = { path = "../proto" }

async-lock = "2.7.0"
async-trait = "0.1.71"
aws-config = "0.57.1"
aws-sdk-s3 = { version = "0.35.0" }
aws-smithy-runtime = { version = "0.57.1" }
bincode = "1.3.3"
blake3 = "1.4.1"
byteorder = "1.4.3"
bytes = "1.4.0"
filetime = "0.2.21"
futures = "0.3.28"
hex = "0.4.3"
hyper = { version = "0.14.27" }
hyper-rustls = { version = "0.24.2", features = ["webpki-tokio"] }
lz4_flex = "0.11.1"
parking_lot = "0.12.1"
prost = "0.11.9"
rand = "0.8.5"
serde = "1.0.167"
sha2 = "0.10.7"
shellexpand = "3.1.0"
tokio = { version = "1.29.1" }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tokio-util = { version = "0.7.8" }
tonic = { version = "0.9.2", features = ["gzip"] }
tracing = "0.1.40"
uuid = { version = "1.4.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
memory-stats = "1.1.0"
once_cell = "1.18.0"
http = "^0.2"
aws-smithy-types = "0.57.1"
aws-sdk-s3 = { version = "0.35.0"  }
aws-smithy-runtime = { version = "0.57.1", features = ["test-util"] }
