load(
    "@rules_rust//rust:defs.bzl",
    "rust_doc",
    "rust_doc_test",
    "rust_library",
    "rust_test_suite",
)

rust_library(
    name = "native-link-worker",
    srcs = [
        "src/lib.rs",
        "src/local_worker.rs",
        "src/running_actions_manager.rs",
        "src/worker_api_client_wrapper.rs",
        "src/worker_utils.rs",
    ],
    proc_macro_deps = [
        "@crate_index//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//error",
        "//native-link-config",
        "//native-link-scheduler",
        "//native-link-store",
        "//native-link-util",
        "//proto",
        "@crate_index//:bytes",
        "@crate_index//:filetime",
        "@crate_index//:formatx",
        "@crate_index//:futures",
        "@crate_index//:hex",
        "@crate_index//:serde_json5",
        "@crate_index//:parking_lot",
        "@crate_index//:prost",
        "@crate_index//:relative-path",
        "@crate_index//:scopeguard",
        "@crate_index//:serde",
        "@crate_index//:shlex",
        "@crate_index//:tokio",
        "@crate_index//:tokio-stream",
        "@crate_index//:tonic",
        "@crate_index//:uuid",
    ],
)

rust_test_suite(
    name = "integration",
    srcs = [
        "tests/local_worker_test.rs",
        "tests/running_actions_manager_test.rs",
    ],
    compile_data = [
        "tests/utils/local_worker_test_utils.rs",
        "tests/utils/mock_running_actions_manager.rs",
    ],
    proc_macro_deps = [
        "@crate_index//:async-trait",
        "@crate_index//:ctor",
    ],
    deps = [
        ":native-link-worker",
        "//error",
        "//native-link-config",
        "//native-link-scheduler",
        "//native-link-store",
        "//native-link-util",
        "//proto",
        "@crate_index//:async-lock",
        "@crate_index//:env_logger",
        "@crate_index//:futures",
        "@crate_index//:hyper",
        "@crate_index//:once_cell",
        "@crate_index//:pretty_assertions",
        "@crate_index//:prost",
        "@crate_index//:prost-types",
        "@crate_index//:rand",
        "@crate_index//:tokio",
        "@crate_index//:tonic",
    ],
)

rust_doc(
    name = "docs",
    crate = ":native-link-worker",
)

rust_doc_test(
    name = "doc_test",
    crate = ":native-link-worker",
)
