[package]
name = "native-link-worker"
version = "0.0.0"
edition = "2021"

[dependencies]
error = { path = "../error" }
proto = { path = "../proto" }
native-link-config = { path = "../native-link-config" }
native-link-util = { path = "../native-link-util" }
native-link-store = { path = "../native-link-store" }

# TODO(aaronmondal): This should not be a dependency. Move corresponding
#                    functionality out of the schedulers.
native-link-scheduler = { path = "../native-link-scheduler" }

async-lock = "2.7.0"
async-trait = "0.1.71"
bytes = "1.4.0"
filetime = "0.2.21"
formatx = "0.2.1"
futures = "0.3.28"
hex = "0.4.3"
parking_lot = "0.12.1"
prost = "0.11.9"
relative-path = "1.8.0"
scopeguard = "1.2.0"
serde = "1.0.167"
serde_json5 = "0.1.0"
shlex = "1.1.0"
tokio = { version = "1.29.1", features = ["sync", "rt", "process"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tonic = { version = "0.9.2", features = ["gzip"] }
uuid = { version = "1.4.0", features = ["v4"] }

[dev-dependencies]
ctor = "0.2.3"
env_logger = "0.10.0"
hyper = "0.14.27"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"
prost-types = "0.11.9"
rand = "0.8.5"
