lints.workspace = true

[package]
edition = "2024"
name = "nativelink-config"
version = "0.6.0"

[dependencies]
nativelink-error = { path = "../nativelink-error" }

byte-unit = { version = "5.1.6", default-features = false, features = ["byte"] }
humantime = "2.2.0"
rand = { version = "0.9.0", default-features = false, features = [
  "thread_rng",
] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json5 = "0.2.1"
shellexpand = { version = "3.1.0", default-features = false, features = [
  "base-0",
] }

[dev-dependencies]
pretty_assertions = { version = "1.4.1", features = ["std"] }
serde_json = { version = "1.0.140", default-features = false, features = [
  "std",
] }
