[package]
name = "nativelink-controller"
version = "0.5.3"
edition = "2021"

[[bin]]
name = "nativelink-controller"

[[bin]]
name = "generate-crd"

[features]
default = ["crd"]
crd = [
  "nativelink-config/crd"
]

[dependencies]
nativelink-config = { path = "../nativelink-config" }

serde = { version = "1.0.210", default-features = false }
kube = { version = "0.96.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23.0", features = ["v1_31", "schemars"] }
schemars = "0.8.21"
serde_json = "1.0.128"
serde_yml = "0.0.12"
futures = { version = "0.3.30", default-features = false }
tokio = { version = "1.40.0", features = ["fs", "rt-multi-thread", "signal", "io-util", "process", "macros"], default-features = false }
tracing = { version = "0.1.40", default-features = false }
anyhow = "1.0.93"
thiserror = "2.0.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }
chrono = "0.4.38"
