[package]
edition = "2024"
name = "nativelink-crio-worker-pool"
version = "0.1.0"
# CRI-O uses Unix domain sockets - only available on Unix-like systems
publish = false

[features]
cargo-build = []
default = ["cargo-build"]

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-build"]

[dependencies]
nativelink-config = { path = "../nativelink-config", features = [
  "warm-worker-pools",
] }
nativelink-error = { path = "../nativelink-error" }
nativelink-metric = { path = "../nativelink-metric" }
nativelink-util = { path = "../nativelink-util" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
serde_with = { version = "3.12.0", features = ["macros"] }
tempfile = { version = "3", default-features = false }
tokio = { version = "1.44.1", features = [
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
], default-features = false }
tracing = { version = "0.1.41", default-features = false }
uuid = { version = "1.16.0", default-features = false, features = [
  "serde",
  "v4",
] }

# gRPC dependencies for CRI communication
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
prost = { version = "0.13", default-features = false }
tonic = { version = "0.13.0", default-features = false, features = [
  "transport",
] }
tower = { version = "0.5", default-features = false }

[build-dependencies]
tonic-build = { version = "0.13.0", default-features = false, features = [
  "prost",
] }

[lints]
workspace = true
